--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+}
 
+@theme {
   --color-primary: #27519b;
   --color-secondary: #74acda;
   --color-text-main: #efb333;
@@ -12,22 +14,30 @@
   --color-gray-light: #8e8e8e;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Custom scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 20px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #74acda;
+  border: 7px solid white;
+}
+.custom-scrollbar::-webkit-scrollbar-button:single-button:decrement {
+  height: 20px;
+  background: url("/images/up-arrow.svg") no-repeat center;
+  background-size: 25px 15px;
+}
+.custom-scrollbar::-webkit-scrollbar-button:single-button:increment {
+  height: 20px;
+  background: url("/images/down-arrow.svg") no-repeat center;
+  background-size: 25px 15px;
 }
