--- a/src/styles/campain.css
+++ b/src/styles/campain.css
@@ -1,13 +1,20 @@
-/* CORRECT */
-.btn-primary {
-  display: flex;
-  text-align: center;
-  background-color: #74acda;
-  color: white;
-  font-size: small;
-  padding: 6px 10px;
-  border-radius: 5px;
-}
-.btn-primary:hover {
-  background-color: skyblue;
+@layer components {
+  .btn-primary {
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    background-color: var(--color-secondary);
+    padding: 6px 5px;
+    min-height: 35px;
+    font-weight: var(--font-weight-semibold);
+    color: var(--color-white);
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-text-secondary);
+      }
+    }
+  }
+  .custom-scrollbar {
+    scrollbar-color: #74acda #ffffff;
+  }
 }
