--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   color: white;
   height: 4.5em;
-  width: 10em;
+  width: 100%;
   background: linear-gradient(
     360deg,
     rgba(116, 172, 218, 1) 0%,
