--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --color-gray-light: #8e8e8e;
   --color-gray-bg: #d7d8d9;
   --color-black: #000000;
+  --color-custom-green: #7fbb48;
 }
 
 body {
