--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,29 @@ body {
   background-color: #d9534f;
   font-size: 14px;
 }
+
+@media (min-height: 601px) and (max-height: 800px) {
+  .title-column {
+    font-size: 1.1em;
+    margin-bottom: 0.2em;
+  }
+  .title-fields {
+    font-size: 0.8em;
+  }
+  .arrows-btn {
+    height: 45px;
+    width: 45px;
+  }
+  .nav-logo {
+    height: 65px;
+  }
+  .nav-title {
+    font-size: 35px;
+  }
+  .nav-logo {
+    height: 40px;
+  }
+  .home-img {
+    height: 9em;
+  }
+}
